# sel4-rs

./: .gitmodules  Cargo.toml  README.md  sel4-rs.drawio
arch/armv7a/: Cargo.toml
arch/armv7a/ldscript/: armv7a.ld
arch/armv7a/src/: asm.rs  cache.rs  lib.rs  lock.rs  mmu.rs  registers.rs  start.rs  vectors.rs
arch/armv7a/src/cache/: cp15_branch.rs  cp15_dcache.rs  cp15_icache.rs  scu.rs
arch/armv7a/src/lock/: spinlock.rs
arch/armv7a/src/mmu/: attributes.rs  bitfields.rs  level1.rs  level2.rs
arch/armv7a/src/registers/: cp15_c15.rs  cp15_cache.rs  cp15_fault.rs  cp15_ident.rs  cp15_mmu.rs  cp15_secext.rs  cp15_sysctrl.rs  cp15_thread.rs  cp15_tlb.rs  cpsr.rs
arch/macros/: Cargo.toml
arch/macros/src/: lib.rs
examples/: arduzynq.dts
examples/hello-world/: Cargo.toml  build.rs
examples/hello-world-rootserver/: Cargo.toml
examples/hello-world-rootserver/.cargo/: config.toml
examples/hello-world-rootserver/src/: main.rs
examples/hello-world/src/: main.rs
kernel/: Cargo.toml  arduzynq.dts  build.rs
kernel/.cargo/: config.toml
kernel/ldscripts/: kernel-armv7a.ld
kernel/src/: main.rs
rootserver/: Cargo.toml  build.rs
rootserver/ldscripts/: rootserver.ld
rootserver/macros/: Cargo.toml
rootserver/macros/src/: lib.rs
rootserver/src/: lib.rs
sel4-rs/: Cargo.toml  build.rs
sel4-rs/src/: lib.rs
sel4-sys/: build.rs
sel4-sys/src/: aarch32.rs  lib.rs
sys/sel4-kernel-sys/: Cargo.toml  build.rs
sys/sel4-kernel-sys/src/: lib.rs
sys/sel4-lib-sys/: Cargo.toml  build.rs
sys/sel4-sys/: Cargo.toml  build.rs
sys/sel4-sys/sel4/projects/rootserver/: CMakeLists.txt
