[package]
name = "sel4-kernel-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "sel4-kernel"

[features]
default = []
zynq7000 = ["sel4-sys/zynq7000"]
mcs = ["sel4-sys/mcs"]
smp = ["sel4-sys/smp"]
dangerous-code-injection = ["sel4-sys/dangerous-code-injection"]

[dependencies]
sel4-sys = { path = "../sel4-sys", default-features = false }

[build-dependencies]
anyhow = "1.0.79"
duct = "0.13.7"
